--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: #090909">
   <head>
+    <meta name="theme-color" content="#090909" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
